--- a/classes/AccountOperationsTest.cls
+++ b/classes/AccountOperationsTest.cls
@@ -2,6 +2,7 @@
 public class AccountOperationsTest {
     @isTest static void testAccountHasDefaultDescription() {       
         // Perform test
+        // Please don't perform the test
         Test.startTest();
         Account acc = new Account(Name='Test Account');
         Database.SaveResult result = Database.insert(acc);
